--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 </head>
 
-<body>
+<body class="background">
 
 <!-- WEB PAGE CONTENT HERE -->
 
 <div class="pageContainer">
-  <div class="imageContainer"> 
-    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
+  <div class="imageContainer">
+    <img src="images/newcookies.jpg" alt="Tray of Chocolate Chip Cookies." />
   </div>
   <div class="textContainer">
     <h1>Cookies!</h1>
@@ -22,13 +22,10 @@
     <ul>
       <li>Chocolate Chip</li>
       <li>Peanut Butter</li>
-      <li>Christmas</li>
+      <li>Heath Bar</li>
     </ul>
   </div>
 </div>
 
 </body>
 </html>
-
-
-
